manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbz-deploy
  labels:
    app: dbz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dbz
  template:
    metadata:
      name: dbz-pod
      labels:
        app: dbz
    spec: 
      containers:
      - name: dbz-container
        image: nidhi2425/dbz
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-deploy
  labels:
    app: op
spec:
  replicas: 2
  selector:
    matchLabels:
      app: op
  template:
    metadata:
      name: op-pod
      labels:
        app: op
    spec: 
      containers:
      - name: op-container
        image: nidhi2425/one_piece
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yyh-deploy
  labels:
    app: yyh
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yyh
  template:
    metadata:
      name: yyh-pod
      labels:
        app: yyh
    spec: 
      containers:
      - name: yyh-container
        image: nidhi2425/yyh
        ports:
        - containerPort: 80
